# amoon-launcher

./: .env.r2.example  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: install.ps1  install.sh  installer.nsi  r2.mjs  r2.sh  upload-r2.sh
src/: App.css  App.jsx  index.css  main.jsx  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  download.rs  fabric.rs  files.rs  instance.rs  java.rs  launcher.rs  lib.rs  main.rs  modpack.rs  mods.rs  quilt.rs  system_check.rs
src/components/: AddInstallModal.jsx  DownloadProgress.jsx  EditInstallModal.jsx  InstallWizard.jsx  LoginModal.jsx  Modal.jsx  Toggle.jsx
src/constants/: icons.js  theme.js
src/panels/: FileManagerPanel.jsx  HomePanel.jsx  ModsPanel.jsx  ScreenshotsPanel.jsx
