[package]
name = "mc-launcher"
version = "0.1.0"
description = "AMoon Launcher"
authors = ["AMoon Team"]
edition = "2021"

[lib]
name = "mc_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client — download files, fetch APIs
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# SHA1 — verify file integrity
sha1 = { version = "0.10", features = ["std"] }

# UUID — offline account
uuid = { version = "1", features = ["v3", "v4"] }

# System info — detect RAM + CPU
sysinfo = "0.30"

# Archive — extract Java zip/tar.gz
zip = "2"
tar = "0.4"
flate2 = "1"

# URL encoding
urlencoding = "2"

# Base64 — Microsoft OAuth + PKCE
base64 = "0.22"

# SHA256 — Ely.by PKCE code challenge
sha2 = "0.10"

# Random — OAuth state
rand = "0.8"

# Open browser — Microsoft OAuth
open = "5"

# Async trait
async-trait = "0.1"
futures-util = "0.3.32"
lazy_static = "1.5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
